@@ -1,3 +1,10 @@
+2001-08-31  Kevin Vandersloot <kfv101@psu.edu>
+
+	* panel_widget.c (panel_widget_get_free_space): fix 
+	initializing of right, left ints. They were switched. This
+	fixes the case where the tasklist wouldn't honor the
+	"Only use empty space" option.
+
 2001-09-01  Darin Adler  <darin@bentspoon.com>
 
 	* conditional.c:
